# lang-myv

./: .gitignore  .glottologid.txt  AUTHORS  CITATION.cff  ErzyaDocumentation.md  Links.md  Makefile.in  README  README.markdown  README.md  _config.yml  adjectives-affixes-fst-src.md  adjectives-affixes.jspwiki  adjectives-russian-like_newwords-stems-fst-src.md  adjectives_newwords-stems-fst-src.md  adpositions-affixes-fst-src.md  adpositions-affixes.md  adverbs-affixes-fst-src.md  adverbs_newwords-stems.md  autogen.sh  clitics-fst-src.md  configure.ac  configure~  disambiguator-cg3-src.md  docu-grammartags.rus.md  exceptions-stems-fst-src.md  exceptions-stems.md  foo  functions-cg3-src.md  giella-myv.pc.in  grammarchecker-grammarcheckers-tools.md  hyphenated-nouns-stems-fst-src.md  hyphenated-verbs-stems.md  index-header.md  index.md  interjections-affixes-fst-src.md  interjections-affixes.md  language-map.md  lemmacount.json  manifest.toml  (+93 more)
src/: 00_readme.txt  A_erz-lex.xml  AddTgFin2N_MyvLexXml.xml  DET_erz-lex.xml  Ideoph_erz-lex.xml  Make-all-myv-lex.sh  Make-myv-all.sh  Make-myv-gen-hfst.sh  Make-myv-lex.txt.sh  Make-myv-twolc-hfst.sh  Makefile  Makefile.am  Makefile.hfst  Makefile_xml  POSTP_erz-lex.xml  PROP_erz-lex.xml  TestLexc-noun.txt  adj_myv-lexc.txt  adv_myv-lex.txt  adv_myv-lexc.txt  conj_myv-lex.txt  conj_myv-lexc.txt  dict.xsd  interj_myv-lex.txt  interj_myv-lexc.txt  myv-lex.txt  myv-morph-endLexc.txt  myv.apertium-lower.relabel  myv.apertium.relabel  noun-myv-morph.txt  nounLexcErz.lexc  noun_myv-lexc.txt  num-myv-morph.txt  pcle_myv-lexc.txt  pers-myv-morph.txt  pers_myv-lexc.txt  postp_myv-lex.txt  postp_myv-lexc.txt  pron-myv-morph.txt  pronPersLexcErz.lexc  (+10 more)
src/cg3/: dependency.cg3  disambiguator.cg3  functions.cg3  generated-tag-list.cg3
src/filters/: Makefile.am  remove-dialect-tags.regex
src/fst/: #root.lexc#  .#root.lexc  Makefile.am  clitics.lexc  compounding.lexc  hfst-twolc-error-log.txt  missing6freq.txt  phonology.twolc  root.lexc
src/fst/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  interjections.lexc  nonverbalConjugation.lexc  nouns.lexc  possessorindices.lexc  pronouns.lexc  propernouns.lexc  quantifiers.lexc  symbols.lexc  verbs.lexc
src/fst/filters/: Makefile.am  remove-diaereses-enhancement.regex
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc
src/fst/morphology/affixes/: .#nonverbalConjugation.lexc  adjectives.lexc  adpositions.lexc  adverbs.lexc  (+9 more)
src/fst/orthography/: Latn-to-Cyrl.xfscript  spellrelax.regex
src/fst/scripts/: urj-Cyrl-myv-conversion.pl
src/fst/stems/: A_myv2x.lexc  A_myv2x.xml  Adp_myv2x.lexc  Adp_myv2x.xml  Adp_references_myv2x.xml  Adv_Ideoph_myv2x.lexc  Adv_Ideoph_myv2x.xml  Adv_Spat_myv2x.lexc  Adv_Spat_myv2x.xml  Adv_myv2x.lexc  Adv_myv2x.xml  CC_myv2x.xml  CS_myv2x.lexc  CS_myv2x.xml  Det_myv2x.lexc  Det_myv2x.xml  Interj_myv2x.lexc  Interj_myv2x.xml  N_Prop_myv2x.lexc  N_Prop_myv2x.xml  N_myv2x.lexc  Num_myv2x.lexc  Num_myv2x.xml  Pcle_myv2x.lexc  Pcle_myv2x.xml  Prc_myv2x.lexc  Prc_myv2x.xml  Pron_myv2x.lexc  Pron_myv2x.xml  V_myv2x.lexc  abbreviations.lexc  acronyms.lexc  adjectives-russian-like_newwords.lexc  adjectives.lexc  adjectives_newwords.lexc  adpositions.lexc  adverbs.lexc  adverbs_newwords.lexc  bahuvrihis.lexc  bahuvrihis.xml  (+16 more)
src/fst/syllabification/: hyphenation.xfscript
src/fst/test/: Makefile.am
src/fst/transcriptions/: transcriptor-numbers-digit2text.lexc  transcriptor-symbols2text.lexc
src/morphology/: Makefile.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc  tags.yaml
src/morphology/affixes/: adjectives.lexc  adpositions.lexc  adverbs.lexc  clitics.lexc  interjections.lexc  nonverbalConjugation.lexc  nouns.lexc  possessorindices.lexc  postpositions.lexc  pronouns.lexc  propernouns.lexc  quantifiers.lexc  verbs.lexc
src/morphology/stems/: ADV_myv-lex.xml  A_myv2x.lexc  A_myv2x.xml  Adp_myv2x.lexc  Adp_myv2x.xml  Adv_Ideoph_myv2x.lexc  Adv_Ideoph_myv2x.xml  Adv_Spat_myv2x.lexc  Adv_Spat_myv2x.xml  Adv_myv2x.lexc  Adv_myv2x.xml  CC_myv2x.lexc  CC_myv2x.xml  CS_myv2x.lexc  CS_myv2x.xml  DEM_myv-lex.xml  DV-N_myv-lex.xml  Descr_myv2x.lexc  Descr_myv2x.xml  Det_myv2x.lexc  Det_myv2x.xml  Interj_myv2x.lexc  Interj_myv2x.xml  MANNER_myv-lex.xml  N_Prop_myv2x.lexc  N_Prop_myv2x.xml  N_myv-lex.xml  N_myv2x.lexc  Num_myv2x.lexc  Num_myv2x.xml  PCLE_myv-lex.xml  PHRASE-V_myv-lex.xml  PRC_myv-lex.xml  PRON_myv-lex.xml  PROP-ANIM-MALE.NAMES_myv-lex.xml  PROP-INANIM_myv-lex.xml  PROP_myv-lex.xml  Pcle_myv2x.lexc  Pcle_myv2x.xml  Prc_myv2x.lexc  (+104 more)
src/orthography/: Cyrl-to-Latn.xfscript  inituppercase.regex  spellrelax-nfc2nfd.regex  spellrelax-nfc2nfd.regex.sigma.nfc  spellrelax-nfc2nfd.regex.sigma.nfd  spellrelax.regex  spellrestrict-nfd2nfc.regex.sigma.nfc
src/phonology/: myv-phon.twolc  myv.twolc
src/scripts/: urj-Cyrl-myv-conversion.pl
src/syntax/: dependency.cg3  disambiguation.cg3  disambiguator.cg3
src/transcriptions/: clock.lexc  date.lexc  numbers.lexc  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc
src/working_files/: AD-A_myv-lex.xml  ADV_myv-lex.xml  A_erz-lex.xml  A_myv-lex.xml  BAHUVRIHI_myv-lex.xml  CONJ_myv-lex.xml  DEM_myv-lex.xml  DV-N_myv-lex.xml  INTERJ_myv-lex.xml  MANNER_myv-lex.xml  N-COLL_myv-lex.xml  N_myv-lex.xml  PCLE_myv-lex.xml  PHRASE-N_myv-lex.xml  PHRASE-V_myv-lex.xml  POSTP_erz-lex.xml  POSTP_myv-lex.xml  PRED2_myv-lex.xml  PRON_myv-lex.xml  PROP-ANIM-CYRILLIC-FEMALE-NAMES_myv-lex.xml  PROP-ANIM-CYRILLIC-MALE-NAMES_myv-lex.xml  PROP-ANIM-FEMALE.NAMES_myv-lex.xml  PROP-ANIM-MALE.NAMES_myv-lex.xml  PROP-ANIM-NAMES_myv-lex.xml  PROP-CYRILLIC-FEMALE-NAMES_myv-lex.xml  PROP-CYRILLIC-MALE-NAMES_myv-lex.xml  PROP-INANIM_myv-lex.xml  PROP-RUSSIAN-MALE.NAMES-Derivable_myv-lex.xml  PROP_myv-lex.xml  PTC_myv-lex.xml  QNT_myv-lex.xml  SPAT_myv-lex.xml  TEMP_myv-lex.xml  V_myv-lex.xml  Working-A_myv-lex.xml  Working-N_myv-lex.xml  Working-V_myv-lex.xml
(+255 files in other folders)
